welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
droite()
^Balin:4: error: '(' expected but identifier found.
	if estSurBiscuit()[
           ^Balin:5: error: illegal start of simple expression
	prendBiscuit();
                      ^Balin:8: error: ';' expected but 'else' found.
}else{avance();
 ^